--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -1,25 +1,210 @@
 //寬度自定義
+$VABackgroundColor:#E0D8D4;
+$VADarkOrange:#462A1E;
+$VARaspberry:#D9BCB8;
+$VADarkGray:#333333;
+$VAFontSizeS:8px;
 
+* { //outline: 1px solid pink;
+    box-sizing: border-box;
+    text-decoration:none;
 
-
+}
 
 body{
-    background: #E0D8D4;
+    background: $VABackgroundColor;
+    
 }
 
-
+//首頁選單
 .navbar{
-background-color: #D9BCB8;
-height: 170px;
+background-color: $VARaspberry;
+height: 10em;
+font-size: 1em;
+display: flex;
+justify-content: space-between;
+
+ul{
+    display: flex;
+    justify-content: center;
+    align-self:center;
+    li{
+        margin: 0 1em;
+
+    }
+}
+a{
+    color: $VADarkOrange;
+}
+
 img{
-    height: 100px;
-    // background-image: url("/img/logoB.png");
+    height: 10em;
+}}
+
+//首頁banner
+.indexBanner{
+    margin: 4em 0;
+    z-index:0;
+    height: 30em;
+    // width: 100%;
+    background-size: cover;
+    background-image:url("/img/素材/coffee-2540277_1280.jpg");
+    // overflow: hidden;
+    .indexBannerContent{
+        text-align: center;
+        padding: 5em 0;
+
+        
+        h2{
+            font-size: 4em;
+            //text-shadow:3px 3px 5px 6px #333333;
+            span{
+                display: flex;
+                flex-direction: column;
+                color: #ffffff;
+                margin:0.5em;
+            }
+        }
+        .goCommodityPage{
+            margin: 0 auto;
+            text-align: center;
+            background-color: #ffffff;
+            font-size: 1.5em;
+            line-height: 2em;
+            height: 2em;
+            width: 6em;
+            color:$VADarkOrange ;
+            border-radius:0.5em;
+        }
+    }
+    
 
 }
-}
-.indexBanner{
-    background-image:url("/img/NU_46be0f4a2c64da1e3bdeaae49bfc64d3.jpg");
-}
-.brandContent{
+
+//關於我
+.aboutBrand{
     background-color: #ffffff;
+    display: flex;
+    justify-content:space-between;
+    font-size: 1em;
+    width: auto;
+    height: 22em;
+    padding: 2em;
+    margin: 0 auto;
+    
+    
+    .brandLogo{
+
+        display: flex;
+        flex-direction:column;
+        img{
+            width: 18em;
+        }
+    }
+    .brandContent{
+        width: 90%;
+        text-align: left;
+        margin: 0 3em;
+
+        p{
+            line-height: 1.5em;
+            margin-top: 1em;
+        }
+
+        img{
+            margin-top: 1em;
+
+        }
+    }
+
+    .brandContentImg{
+        text-align: right;
+        img{
+            width: 20em;
+        }
+    }
+
+    .brandImg{
+        min-width: 20%;
+        text-align: right;
+        overflow: hidden;
+        img{
+            height:100%;
+
+        }
+    }
+}
+
+//商品區
+.commodityTitle{
+    //margin-top: 3em;
+    margin: 3em auto;
+
+    h3 {
+        text-align: center;
+        img{
+            height:10em;
+            
+        }
+    }
+
+    .commodity{
+        text-align: center;
+        margin: 0 auto;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        max-width: 86em;
+
+
+
+        li{
+            padding: 1em;
+            max-width: 22em;
+            
+            overflow: hidden;
+            img{
+                height: 20em;
+                //width: 120%;
+
+            }
+            .commodityName{
+                display: block;
+                font-size: 1em;
+                margin-top: 1em;
+            }
+            .commodityPrice{
+                display: block;
+                font-size: 1.5em;
+                margin-top: 0.3em;
+                color: $VADarkOrange;
+            }
+        }
+    }
+    
+}
+
+
+// 表尾樣式
+.footer{
+background-color:$VADarkGray;
+color: #ffffff;
+height:22em ;
+padding: 5em 2em 0 2em;
+display: flex;
+justify-content: space-between;
+
+li{
+    line-height: 2em;
+}
+.vaIGBtn{
+    background-image: url("/img/iconIG.png");
+}
+
+
+.mapKit {
+    width: 3em;
+    height: 2em;
+    color: #ffffff;
+}
 }
