--- a/scss/_format.scss
+++ b/scss/_format.scss
@@ -2,6 +2,7 @@ $VABackgroundColor:#E0D8D4;
 $VADarkOrange:#462A1E;
 $VARaspberry:#D9BCB8;
 $VADarkGray:#333333;
+$VABorder:#8A6552;
 $VAFontSizeS:8px;
 
 .solid{
