--- a/css/all.css
+++ b/css/all.css
@@ -76,8 +76,8 @@ body {
 
 .navbar {
   background-color: #D9BCB8;
-  height: 10em;
-  font-size: 1em;
+  height: 10rem;
+  font-size: 1rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -98,7 +98,7 @@ body {
 }
 
 .navbar ul li {
-  margin: 0 1em;
+  margin: 0 1rem;
 }
 
 .navbar a {
@@ -106,24 +106,24 @@ body {
 }
 
 .navbar img {
-  height: 10em;
+  height: 10rem;
 }
 
 .indexBanner {
-  margin: 4em 0;
+  margin: 4rem 0;
   z-index: 0;
-  height: 30em;
+  height: 30rem;
   background-size: cover;
   background-image: url("/img/素材/coffee-2540277_1280.jpg");
 }
 
 .indexBanner .indexBannerContent {
   text-align: center;
-  padding: 5em 0;
+  padding: 5rem 0;
 }
 
 .indexBanner .indexBannerContent h2 {
-  font-size: 4em;
+  font-size: 4rem;
 }
 
 .indexBanner .indexBannerContent h2 span {
@@ -135,19 +135,19 @@ body {
       -ms-flex-direction: column;
           flex-direction: column;
   color: #ffffff;
-  margin: 0.5em;
+  margin: 0.5rem;
 }
 
 .indexBanner .indexBannerContent .goCommodityPage {
   margin: 0 auto;
   text-align: center;
   background-color: #ffffff;
-  font-size: 1.5em;
-  line-height: 2em;
-  height: 2em;
-  width: 6em;
+  font-size: 1.5rem;
+  line-height: 2rem;
+  height: 2rem;
+  width: 6rem;
   color: #462A1E;
-  border-radius: 0.5em;
+  border-radius: 0.5rem;
 }
 
 .aboutBrand {
@@ -158,10 +158,10 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  font-size: 1em;
+  font-size: 1rem;
   width: auto;
-  height: 22em;
-  padding: 2em;
+  height: 22rem;
+  padding: 2rem;
   margin: 0 auto;
 }
 
@@ -176,22 +176,22 @@ body {
 }
 
 .aboutBrand .brandLogo img {
-  width: 18em;
+  width: 18rem;
 }
 
 .aboutBrand .brandContent {
   width: 90%;
   text-align: left;
-  margin: 0 3em;
+  margin: 0 3rem;
 }
 
 .aboutBrand .brandContent p {
-  line-height: 1.5em;
-  margin-top: 1em;
+  line-height: 1.5rem;
+  margin-top: 1rem;
 }
 
 .aboutBrand .brandContent img {
-  margin-top: 1em;
+  margin-top: 1rem;
 }
 
 .aboutBrand .brandContentImg {
@@ -199,7 +199,7 @@ body {
 }
 
 .aboutBrand .brandContentImg img {
-  width: 20em;
+  width: 20rem;
 }
 
 .aboutBrand .brandImg {
@@ -213,7 +213,7 @@ body {
 }
 
 .commodityTitle {
-  margin: 3em auto;
+  margin: 3rem auto;
 }
 
 .commodityTitle h3 {
@@ -221,7 +221,7 @@ body {
 }
 
 .commodityTitle h3 img {
-  height: 10em;
+  height: 10rem;
 }
 
 .commodityTitle .commodity {
@@ -235,37 +235,37 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  max-width: 86em;
+  max-width: 86rem;
 }
 
 .commodityTitle .commodity li {
-  padding: 1em;
-  max-width: 22em;
+  padding: 1rem;
+  max-width: 22rem;
   overflow: hidden;
 }
 
 .commodityTitle .commodity li img {
-  height: 20em;
+  height: 20rem;
 }
 
 .commodityTitle .commodity li .commodityName {
   display: block;
-  font-size: 1em;
-  margin-top: 1em;
+  font-size: 1rem;
+  margin-top: 1rem;
 }
 
 .commodityTitle .commodity li .commodityPrice {
   display: block;
-  font-size: 1.5em;
-  margin-top: 0.3em;
+  font-size: 1.5rem;
+  margin-top: 0.3rem;
   color: #462A1E;
 }
 
 .footer {
   background-color: #333333;
   color: #ffffff;
-  height: 22em;
-  padding: 5em 2em 0 2em;
+  height: 22rem;
+  padding: 5rem 2rem 0 2rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -275,7 +275,7 @@ body {
 }
 
 .footer li {
-  line-height: 2em;
+  line-height: 2rem;
 }
 
 .footer .vaIGBtn {
@@ -283,8 +283,8 @@ body {
 }
 
 .footer .mapKit {
-  width: 3em;
-  height: 2em;
+  width: 3rem;
+  height: 2rem;
   color: #ffffff;
 }
 /*# sourceMappingURL=all.css.map */
