--- a/scss/_format.scss
+++ b/scss/_format.scss
@@ -9,6 +9,9 @@ $VAFontSizeS:8px;
     border-top: 1px solid $VADarkGray ;
     opacity:0.5;
 }
+.setInFrame{
+    margin: 0 7rem;
+}
 
 .hide{
     display: none;
