--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -70,9 +70,9 @@ img{
             margin: 0 auto;
             text-align: center;
             background-color: #ffffff;
-            font-size: 1.5rem;
-            line-height: 2rem;
-            height: 2rem;
+            //font-size: 1.5rem;
+            line-height: 2.5rem;
+            height: 2.5rem;
             width: 6rem;
             color:$VADarkOrange ;
             border-radius:0.5rem;
