--- a/css/commodityAll.css
+++ b/css/commodityAll.css
@@ -127,9 +127,8 @@ body {
   margin: 0 auto;
   text-align: center;
   background-color: #ffffff;
-  font-size: 1.5rem;
-  line-height: 2rem;
-  height: 2rem;
+  line-height: 2.5rem;
+  height: 2.5rem;
   width: 6rem;
   color: #462A1E;
   border-radius: 0.5rem;
@@ -276,6 +275,10 @@ body {
 .solid {
   border-top: 1px solid #333333;
   opacity: 0.5;
+}
+
+.setInFrame {
+  margin: 0 7rem;
 }
 
 .hide {
