登入與註冊完成 包含ＪＳ，但註冊尚未成功

--- a/scss/_format.scss
+++ b/scss/_format.scss
@@ -3,6 +3,10 @@ $VADarkOrange:#462A1E;
 $VARaspberry:#D9BCB8;
 $VADarkGray:#333333;
 $VABorder:#8A6552;
+$VALoginBtn:#8A6552;
+$LineColor:#08DF5D;
+
+
 $VAFontSizeS:8px;
 
 .solid{
