樣式有問題先推

--- a/css/deliveryAll.css
+++ b/css/deliveryAll.css
@@ -559,6 +559,11 @@ body {
   text-align: center;
 }
 
+.deliveryContent {
+  margin: 2rem auto;
+  width: 40rem;
+}
+
 .deliveryContent li {
   font-size: 1.2rem;
   padding: 1rem;
