--- a/scss/_commodityPage.scss
+++ b/scss/_commodityPage.scss
@@ -1,9 +1,6 @@
-body{
-    background-color: #ffffff;
-    box-sizing: border-box;
+.commodityTitle{
+    display: flex;
 }
-
-
 
 .commodityContent{
     display: flex;
