--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -1,60 +1,18 @@
-//寬度自定義
-$VABackgroundColor:#E0D8D4;
-$VADarkOrange:#462A1E;
-$VARaspberry:#D9BCB8;
-$VADarkGray:#333333;
-$VABtn:#B18C78;
 
-$VAFontSizeS:8px;
-
-* { //outline: 1px solid pink;
-    box-sizing: border-box;
-    text-decoration:none;
-
-}
-
-body{
-    background: $VABackgroundColor;
-    
-}
-
-//首頁選單
-.navbar{
-background-color: $VARaspberry;
-height: 10rem;
-font-size: 1rem;
-display: flex;
-justify-content: space-between;
-
-ul{
-    display: flex;
-    justify-content: center;
-    align-self:center;
-    li{
-        margin: 0 1rem;
-    }
-}
-a{
-    color: $VADarkOrange;
-}
-
-img{
-    height: 10rem;
-}}
 
 //首頁banner
 .indexBanner{
-    margin: 4rem 0;
+    //margin: 4rem 0;
     z-index:0;
     height: 30rem;
     // width: 100%;
     background-size: cover;
     background-image:url("/img/素材/coffee-2540277_1280.jpg");
+
     // overflow: hidden;
     .indexBannerContent{
         text-align: center;
-        padding: 5rem 0;
-
+        padding: 8rem 0;
         
         h2{
             font-size: 4rem;
@@ -88,14 +46,14 @@ img{
     display: flex;
     justify-content:space-between;
     font-size: 1rem;
-    width: auto;
+    //width: auto;
     height: 22rem;
-    padding: 2rem;
-    margin: 0 auto;
+    //padding: 0 3rem;
+    margin-top: 3rem;
+    margin-bottom: 3rem;
     
     
     .brandLogo{
-
         display: flex;
         flex-direction:column;
         img{
@@ -106,15 +64,13 @@ img{
         width: 90%;
         text-align: left;
         margin: 0 3rem;
-
         p{
             line-height: 1.5rem;
             margin-top: 1rem;
         }
-
         img{
+            width: 18rem;
             margin-top: 1rem;
-
         }
     }
 
@@ -139,7 +95,9 @@ img{
 //商品區
 .commodityTitle{
     //margin-top: 3rem;
-    margin: 3rem auto;
+    //margin: 3rem auto;
+    padding-bottom: 3rem;
+    background-color: $VABackgroundColor;
 
     h3 {
         text-align: center;
@@ -183,29 +141,14 @@ img{
         }
     }
     
+
 }
 
+@media screen and (max-width:768px) { 
 
-// 表尾樣式
-.footer{
-background-color:$VADarkGray;
-color: #ffffff;
-height:22rem ;
-padding: 5rem 2rem 0 2rem;
-display: flex;
-justify-content: space-between;
+    .aboutBrand{
+        display: block;
+        height: auto;
+    }
 
-li{
-    line-height: 2rem;
-}
-.vaIGBtn{
-    background-image: url("/img/iconIG.png");
-}
-
-
-.mapKit {
-    width: 3rem;
-    height: 2rem;
-    color: #ffffff;
-}
 }
