--- a/scss/_sp1CartPage.scss
+++ b/scss/_sp1CartPage.scss
@@ -24,15 +24,20 @@
 }
 
 
-.CartList{
-    text-align: center;
+.cartList{
+    // text-align: center;
+    
     width: 100%;
 
     .cartListName{
         display: flex;
         justify-content: space-between;
     }
+    .asd{
+        vertical-align:middle;
+    }
     
+
     th{
         background-color:$VABorder ;
         margin-bottom: 2rem;
@@ -40,24 +45,36 @@
         color: #ffffff;
     }
     td{
+        margin:auto 3rem;
+        padding: 1em;
+
+        // vertical-align:center;
+        border-bottom: 1px solid #e9e9e9;
+
         h3{
             font-size: 2rem;
+            margin-bottom: 0.5rem;
         }
-        margin: 3rem;
+
         img{
             max-width: 8rem;
+            text-align: center;
         }
+
     }
+    .tdNotSolid{
+        border:none
+    }
+
 
 }
 
 .nextBtn{
     text-align: center;
     margin: 1rem 0;
-    margin-left: 9rem*5;
     padding: 1rem;
     font-size: 1.2rem;
-    //width: 5rem;
+    width: 8rem;
     background-color:$VABorder;
     color: #ffffff;
 }
