--- a/scss/_sp4deliveryCheckPage.scss
+++ b/scss/_sp4deliveryCheckPage.scss
@@ -1,9 +1,8 @@
 .deliveryContent{
-margin: 0 5rem;
+    margin: 2rem auto;
+    width: 35rem;
 }
 .stepBtn{
-    display: flex;
-    justify-content: space-between;
     margin-top: 3rem;
     color:$VADarkGray;
     .nextBtn{
