--- a/scss/_format.scss
+++ b/scss/_format.scss
@@ -8,13 +8,11 @@ $VADarkGray:#333333;
 $VABorder:#8A6552;
 $VALoginBtn:#8A6552;
 $LineColor:#08DF5D;
-
-
 $VAFontSizeS:8px;
 
 
 * { //outline: 1px solid pink;
-  //  box-sizing: border-box;
+    box-sizing: border-box;
     text-decoration:none;
 
 }
