--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -94,8 +94,8 @@
 
 //商品區
 .commodityTitle{
-    //margin-top: 3rem;
-    //margin: 3rem auto;
+    margin-top: 3rem;
+    margin: 3rem auto;
     padding-bottom: 3rem;
     background-color: $VABackgroundColor;
 
