--- a/scss/_searchPage.scss
+++ b/scss/_searchPage.scss
@@ -18,7 +18,7 @@
 
         a{
             padding:0.5rem;
-            background-color: $VABtn;
+            background-color: $VADarkGray;
             color: $VADarkOrange;
         }
         a:hover{ 
