--- a/css/all.css
+++ b/css/all.css
@@ -50,6 +50,8 @@ table {
 }
 
 * {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   text-decoration: none;
 }
 
@@ -216,6 +218,8 @@ body {
 }
 
 .commodityTitle {
+  margin-top: 3rem;
+  margin: 3rem auto;
   padding-bottom: 3rem;
   background-color: #E0D8D4;
 }
@@ -606,5 +610,194 @@ body {
   padding: 1.1rem;
   background-color: #8A6552;
   color: #ffffff;
+}
+
+.commodityBanner {
+  height: 10rem;
+  overflow: hidden;
+}
+
+.commodityBanner img {
+  width: 100%;
+  height: auto;
+  text-align: center;
+}
+
+.searchSort {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.searchSort .sortBtn {
+  font-size: 1.2rem;
+  margin-top: 3rem;
+  margin-right: 1rem;
+}
+
+.searchSort .sortBtn a {
+  padding: 0.5rem;
+  background-color: #333333;
+  color: #462A1E;
+}
+
+.searchSort .sortBtn a:hover {
+  background-color: white;
+  border: 1px solid #8A6552;
+}
+
+.commodity li {
+  padding: 0;
+}
+
+.commodityContent {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: 3rem 5rem;
+}
+
+.commodityNav {
+  font-size: 1rem;
+  margin-right: 3rem;
+}
+
+.commodityNav li {
+  margin-top: 2rem;
+}
+
+.commodityNav .selectCommodity {
+  min-width: 10rem;
+  padding: 1rem 0.5rem;
+}
+
+.commodityNav .selectCommodity .commodityArea {
+  margin: 1rem;
+}
+
+.commodityNav .selectCommodity a {
+  color: #333333;
+}
+
+.purchasingNav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 3rem;
+}
+
+.purchasingNav .productImg {
+  height: 25rem;
+  width: 25rem;
+  overflow: hidden;
+}
+
+.purchasingNav p {
+  margin: 1rem 0 5rem 0;
+}
+
+.purchasingNav ul {
+  margin-left: 2rem;
+}
+
+.purchasingNav ul h1 {
+  font-size: 3rem;
+}
+
+.purchasingNav ul .purchasingSubtitle {
+  font-size: 1.5rem;
+  margin-top: 2rem;
+  margin-bottom: 0.5rem;
+  color: #462A1E;
+}
+
+.purchasingNav ul .selectGrind {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  /*改變右邊箭頭樣式*/
+  border: 1px solid #8A6552;
+  font-size: 1rem;
+  width: 100%;
+  height: 2.5rem;
+  padding: 0.5rem;
+  color: #8A6552;
+}
+
+.purchasingNav ul .purchasingValue {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  /*改變右邊箭頭樣式*/
+  font-size: 1rem;
+  width: 50%;
+  text-align: center;
+  outline: none;
+  padding: 0rem;
+  border: none;
+}
+
+.purchasingNav ul .selectPurchasingNum {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  height: 2.5rem;
+}
+
+.purchasingNav ul .selectPurchasingNum .purchasingNum {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-right: 1rem;
+  border: 1px solid #8A6552;
+}
+
+.purchasingNav ul .selectPurchasingNum .selectValueAddSub {
+  font-size: 1.5rem;
+  color: #462A1E;
+  margin: auto;
+}
+
+.purchasingNav ul .selectPurchasingNum .carBtn {
+  font-size: 1.2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #ffffff;
+  background-color: #8A6552;
+  width: 50%;
+}
+
+.purchasingNav .total {
+  text-align: right;
+  margin: 1rem;
+}
+
+.purchasingNav .total .totalNum {
+  font-size: 2rem;
+  color: #462A1E;
+}
+
+.purchasingText span {
+  line-height: 4rem;
+}
+
+.purchasingText p {
+  line-height: 2rem;
 }
 /*# sourceMappingURL=all.css.map */
